--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -74,8 +74,7 @@ jobs:
       matrix:
         version: [release, devel, trunk]
         arch: [x86_64, aarch64, armv7]
-        ###os: [ubuntu-22.04, macos-13]
-        os: [ubuntu-22.04]
+        os: [ubuntu-22.04, macos-13]
     env:
       ANDROID_API_LEVEL: 24
     steps:
