--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -77,7 +77,8 @@ jobs:
       matrix:
         ###version: [release, devel, trunk]
         version: [release]
-        arch: [x86_64, aarch64, armv7]
+        ###arch: [x86_64, aarch64, armv7]
+        arch: [aarch64]
         ###os: [ubuntu-22.04, macos-13]
         os: [ubuntu-22.04]
         exclude:
@@ -183,11 +184,17 @@ jobs:
           # swift-testing depends on swift-testing-macros, but it shouldn't
           perl -pi -e "s%swift_testing_macros.SwiftTestingMacros%swift.Swift%g" swift/utils/swift_build_support/swift_build_support/products/swift_testing.py
 
-          ./swift/utils/build-script -RA --skip-build-cmark --build-llvm=0 --android --android-ndk $ANDROID_NDK_LATEST_HOME --android-arch ${{ matrix.arch }} --android-api-level $ANDROID_API_LEVEL --build-swift-tools=0 --native-swift-tools-path=${TOOLCHAIN}/bin --native-clang-tools-path=${TOOLCHAIN}/bin --cross-compile-hosts=android-${{ matrix.arch }} --cross-compile-deps-path=$SDK --skip-local-build --build-swift-static-stdlib --xctest --skip-early-swift-driver --install-swift --install-libdispatch --install-foundation --install-xctest --install-destdir=$SDK --swift-install-components='clang-resource-dir-symlink;license;stdlib;sdk-overlay' --cross-compile-append-host-target-to-destdir=False -b -p --install-llbuild --sourcekit-lsp --skip-early-swiftsyntax --swift-testing --install-swift-testing
-          #--swift-testing-macros --install-swift-testing-macros --extra-cmake-options="-DSwiftSyntax_DIR=$PWD/swift-syntax"
+          # make sure swift-syntax is where we expect
+          ls $PWD/swift-syntax
+
+          ./swift/utils/build-script -RA --skip-build-cmark --build-llvm=0 --android --android-ndk $ANDROID_NDK_LATEST_HOME --android-arch ${{ matrix.arch }} --android-api-level $ANDROID_API_LEVEL --build-swift-tools=0 --native-swift-tools-path=${TOOLCHAIN}/bin --native-clang-tools-path=${TOOLCHAIN}/bin --cross-compile-hosts=android-${{ matrix.arch }} --cross-compile-deps-path=$SDK --skip-local-build --build-swift-static-stdlib --xctest --skip-early-swift-driver --install-swift --install-libdispatch --install-foundation --install-xctest --install-destdir=$SDK --swift-install-components='clang-resource-dir-symlink;license;stdlib;sdk-overlay' --cross-compile-append-host-target-to-destdir=False -b -p --install-llbuild --sourcekit-lsp --swiftsyntax --install-swiftsyntax --swift-testing --install-swift-testing --swift-testing-macros --install-swift-testing-macros 
+          #--extra-cmake-options="-DSwiftSyntax_DIR=$PWD/swift-syntax"
 
           # visualize output
           tree $SDK/usr/lib
+
+          # make sure we have built the Testing.swiftmodule
+          tree $SDK/usr/lib | grep Testing.swiftmodule
 
           cp $ANDROID_NDK_LATEST_HOME/toolchains/llvm/prebuilt/linux-x86_64/sysroot/usr/lib/$(echo ${{ matrix.arch }} | sed "s/v7//")-linux-android*/libc++_shared.so $SDK/usr/lib
           patchelf --set-rpath \$ORIGIN $SDK/usr/lib/swift/android/libdispatch.so
