--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -185,6 +185,7 @@ jobs:
           perl -pi -e "s%swift_testing_macros.SwiftTestingMacros%swift.Swift%g" swift/utils/swift_build_support/swift_build_support/products/swift_testing.py
           perl -pi -e "s%# Manually iterate the cross compile hosts.%print(f'### swift_testing.py self.args.cross_compile_hosts: {self.args.cross_compile_hosts}', flush=True)%g" swift/utils/swift_build_support/swift_build_support/products/swift_testing.py
           perl -pi -e "s%if self.has_cross_compile_hosts\(\) and self.is_darwin_host\(base_target\)%if self.has_cross_compile_hosts\(\)%g" swift/utils/swift_build_support/swift_build_support/products/swift_testing.py
+          perl -pi -e "s%if self.has_cross_compile_hosts\(\) and self.is_darwin_host\(host_target\)%if self.has_cross_compile_hosts\(\)%g" swift/utils/swift_build_support/swift_build_support/products/swift_testing.py
           # fixup def should_install
           perl -pi -e "s%return self.args.install_swift_testing_macros%return self.args.install_swift_testing%g" swift/utils/swift_build_support/swift_build_support/products/swift_testing.py
 
