--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -126,7 +126,9 @@ jobs:
             ANDROID_ARCH=$arch BUILD_SWIFT_PM=1 ${TOOLCHAIN}/bin/swift get-packages-and-swift-source.swift
           done
 
+          git apply swift-android-foundation-cacerts.patch
           git apply swift-android.patch swift-android-ci.patch swift-crypto.patch swift-system.patch
+
           if [ ${{ matrix.version }} = 'release' ]; then
             git apply swift-android-ci-release.patch swift-android-foundation-release.patch
             perl -pi -e 's%r26%ndk/27%' swift/stdlib/cmake/modules/AddSwiftStdlib.cmake
